--- a/css/variables.scss
+++ b/css/variables.scss
@@ -12,99 +12,113 @@ $codeicon-bitbucket: "\e908";
 $codeicon-bootstrap: "\e909";
 $codeicon-bower: "\e90a";
 $codeicon-bower-line: "\e90b";
-$codeicon-chrome: "\e90c";
-$codeicon-cnormal: "\e90d";
-$codeicon-cnormal-line: "\e90e";
-$codeicon-codeigniter: "\e90f";
-$codeicon-codepen: "\e910";
-$codeicon-codrops: "\e911";
-$codeicon-coffeescript: "\e912";
-$codeicon-composer: "\e913";
-$codeicon-confluence: "\e914";
-$codeicon-cplusplus: "\e915";
-$codeicon-cplusplus-line: "\e916";
-$codeicon-creativecommons: "\e917";
-$codeicon-css3: "\e918";
-$codeicon-csstricks: "\e919";
-$codeicon-cucumber: "\e91a";
-$codeicon-debian: "\e91b";
-$codeicon-django: "\e91c";
-$codeicon-docker: "\e91d";
-$codeicon-doctrine: "\e91e";
-$codeicon-doctrine-line: "\e91f";
-$codeicon-dotnet: "\e920";
-$codeicon-dropbox: "\e921";
-$codeicon-drupal: "\e922";
-$codeicon-filezilla: "\e923";
-$codeicon-firefox: "\e924";
-$codeicon-foundation: "\e925";
-$codeicon-gimp: "\e926";
-$codeicon-git: "\e927";
-$codeicon-github: "\e928";
-$codeicon-gitkraken: "\e929";
-$codeicon-gitlab: "\e92a";
-$codeicon-go: "\e92b";
-$codeicon-gradle: "\e92c";
-$codeicon-grunt: "\e92d";
-$codeicon-grunt-line: "\e92e";
-$codeicon-gulp: "\e92f";
-$codeicon-heroku: "\e930";
-$codeicon-html5: "\e931";
-$codeicon-illustrator: "\e932";
-$codeicon-in2com: "\e933";
-$codeicon-indesign: "\e934";
-$codeicon-inkscape: "\e935";
-$codeicon-ionic: "\e936";
-$codeicon-jasmine: "\e937";
-$codeicon-java: "\e938";
-$codeicon-javascript: "\e939";
-$codeicon-jekyll: "\e93a";
-$codeicon-jekyllsmall: "\e93b";
-$codeicon-jenkins: "\e93c";
-$codeicon-jetbrains: "\e93d";
-$codeicon-jquery: "\e93e";
-$codeicon-krakenjs: "\e93f";
-$codeicon-laravel: "\e940";
-$codeicon-less: "\e941";
-$codeicon-linux: "\e942";
-$codeicon-meteor: "\e943";
-$codeicon-mongodb: "\e944";
-$codeicon-mysql: "\e945";
-$codeicon-nginx: "\e946";
-$codeicon-nodejs: "\e947";
-$codeicon-nodewebkit: "\e948";
-$codeicon-npm: "\e949";
-$codeicon-oracle: "\e94a";
-$codeicon-perl: "\e94b";
-$codeicon-photoshop: "\e94c";
-$codeicon-php: "\e94d";
-$codeicon-phpstorm: "\e94e";
-$codeicon-postgresql: "\e94f";
-$codeicon-premierepro: "\e950";
-$codeicon-python: "\e951";
-$codeicon-rails: "\e952";
-$codeicon-raspberry: "\e953";
-$codeicon-react: "\e954";
-$codeicon-redhat: "\e955";
-$codeicon-ruby: "\e956";
-$codeicon-sass: "\e957";
-$codeicon-sequelize: "\e958";
-$codeicon-slimphp: "\e959";
-$codeicon-sourcetree: "\e95a";
-$codeicon-ssh: "\e95b";
-$codeicon-stackoverflow: "\e95c";
-$codeicon-sublime: "\e95d";
-$codeicon-swift: "\e95e";
-$codeicon-symfony: "\e95f";
-$codeicon-terminal: "\e960";
-$codeicon-trello: "\e961";
-$codeicon-twig: "\e962";
-$codeicon-typescript: "\e963";
-$codeicon-ubuntu: "\e964";
-$codeicon-vim: "\e965";
-$codeicon-w3c: "\e966";
-$codeicon-wordpress: "\e967";
-$codeicon-yaml: "\e968";
-$codeicon-yii: "\e969";
-$codeicon-zend: "\e96a";
+$codeicon-bugsense: "\e90c";
+$codeicon-chrome: "\e90d";
+$codeicon-cnormal: "\e90e";
+$codeicon-cnormal-line: "\e90f";
+$codeicon-coda: "\e910";
+$codeicon-codeigniter: "\e911";
+$codeicon-codepen: "\e912";
+$codeicon-codrops: "\e913";
+$codeicon-coffeescript: "\e914";
+$codeicon-compass: "\e915";
+$codeicon-composer: "\e916";
+$codeicon-confluence: "\e917";
+$codeicon-cplusplus: "\e918";
+$codeicon-cplusplus-line: "\e919";
+$codeicon-creativecommons: "\e91a";
+$codeicon-css3: "\e91b";
+$codeicon-cssdesk: "\e91c";
+$codeicon-csstricks: "\e91d";
+$codeicon-cucumber: "\e91e";
+$codeicon-debian: "\e91f";
+$codeicon-django: "\e920";
+$codeicon-docker: "\e921";
+$codeicon-doctrine: "\e922";
+$codeicon-doctrine-line: "\e923";
+$codeicon-dotnet: "\e924";
+$codeicon-dropbox: "\e925";
+$codeicon-drupal: "\e926";
+$codeicon-erlang: "\e927";
+$codeicon-filezilla: "\e928";
+$codeicon-firefox: "\e929";
+$codeicon-foundation: "\e92a";
+$codeicon-gimp: "\e92b";
+$codeicon-git: "\e92c";
+$codeicon-github: "\e92d";
+$codeicon-gitkraken: "\e92e";
+$codeicon-gitlab: "\e92f";
+$codeicon-go: "\e930";
+$codeicon-gradle: "\e931";
+$codeicon-grafikart: "\e932";
+$codeicon-grunt: "\e933";
+$codeicon-grunt-line: "\e934";
+$codeicon-gulp: "\e935";
+$codeicon-heroku: "\e936";
+$codeicon-html5: "\e937";
+$codeicon-illustrator: "\e938";
+$codeicon-in2com: "\e939";
+$codeicon-indesign: "\e93a";
+$codeicon-inkscape: "\e93b";
+$codeicon-ionic: "\e93c";
+$codeicon-jasmine: "\e93d";
+$codeicon-java: "\e93e";
+$codeicon-javascript: "\e93f";
+$codeicon-jeet: "\e940";
+$codeicon-jekyll: "\e941";
+$codeicon-jekyllsmall: "\e942";
+$codeicon-jenkins: "\e943";
+$codeicon-jetbrains: "\e944";
+$codeicon-jquery: "\e945";
+$codeicon-krakenjs: "\e946";
+$codeicon-laravel: "\e947";
+$codeicon-less: "\e948";
+$codeicon-linux: "\e949";
+$codeicon-meteor: "\e94a";
+$codeicon-mocha: "\e94b";
+$codeicon-mongodb: "\e94c";
+$codeicon-mysql: "\e94d";
+$codeicon-nginx: "\e94e";
+$codeicon-nodejs: "\e94f";
+$codeicon-nodewebkit: "\e950";
+$codeicon-npm: "\e951";
+$codeicon-oracle: "\e952";
+$codeicon-perl: "\e953";
+$codeicon-photoshop: "\e954";
+$codeicon-php: "\e955";
+$codeicon-phpstorm: "\e956";
+$codeicon-postgresql: "\e957";
+$codeicon-premierepro: "\e958";
+$codeicon-prolog: "\e959";
+$codeicon-purescript: "\e95a";
+$codeicon-python: "\e95b";
+$codeicon-rails: "\e95c";
+$codeicon-raspberry: "\e95d";
+$codeicon-react: "\e95e";
+$codeicon-redhat: "\e95f";
+$codeicon-redis: "\e960";
+$codeicon-ruby: "\e961";
+$codeicon-sass: "\e962";
+$codeicon-sequelize: "\e963";
+$codeicon-slimphp: "\e964";
+$codeicon-smashingmagazine: "\e965";
+$codeicon-sourcetree: "\e966";
+$codeicon-ssh: "\e967";
+$codeicon-stackoverflow: "\e968";
+$codeicon-sublime: "\e969";
+$codeicon-swift: "\e96a";
+$codeicon-symfony: "\e96b";
+$codeicon-terminal: "\e96c";
+$codeicon-travis: "\e96d";
+$codeicon-trello: "\e96e";
+$codeicon-twig: "\e96f";
+$codeicon-typescript: "\e970";
+$codeicon-ubuntu: "\e971";
+$codeicon-vim: "\e972";
+$codeicon-w3c: "\e973";
+$codeicon-webpack: "\e974";
+$codeicon-wordpress: "\e975";
+$codeicon-yaml: "\e976";
+$codeicon-yii: "\e977";
+$codeicon-zend: "\e978";
 
